# prefix-rl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_easyr1_modal.py  run_modal.py  run_rlft_easyr1_modal.py  run_rlft_trl_modal_old.py  run_rlft_verl_modal.py  run_sft_modal.py  run_sft_trl_modal.py  run_vllm_server_modal.py  sft_trl.py  svg_dataset.py  svg_eval.py  svg_renderer.py  svg_renderer_cairo.py
.claude/: settings.local.json
dump/: 1.jsonl
env/svg/: config_svg_rlrf.yaml  config_svg_rlrf_3b.yaml  config_svg_rlrf_7b.yaml  config_svg_rlrf_7b_verl.yaml  config_svg_rlrf_l2_7b_verl.yaml  config_svg_sft_3b.yaml  config_svg_sft_7b.yaml  config_svg_verl.yaml  data_issues.md  dataset_info.json  svg_dataset.ipynb  svg_dataset.py  svg_dataset_modal.py  svg_format.jinja  svg_format_512.jinja  svg_rlrf_l2.py  svg_rlrf_reward.py  svg_rlrf_reward_remote.py
env/svg/misc/: skia_test.py
nb/: image_distance.ipynb
prefixrl/: __init__.py
prefixrl/datasets/: simple_shapes.py  svg_stack_filtered.py  utils.py
prefixrl/reward/image/: dreamsim.py  gaussian.py  l2.py  laplacian.py  util.py
prefixrl/reward/svg/: cairosvg.py  shapes.py
reports/: report.ipynb
tests/reward/image/: test_dreamsim.py  test_image_rewards.py  test_laplacian.py
