[project]
name = "prefix-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cairosvg>=2.8.2",
    "modal>=1.0.1",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.3",
]
